fixes slight overflow in VirtualListSelect

--- a/packages/vizbuilder/src/components/Sidebar/MultiLevelSelect/style.css
+++ b/packages/vizbuilder/src/components/Sidebar/MultiLevelSelect/style.css
@@ -4,6 +4,8 @@
 }
 
 .mlsel-popover-content {
+  min-width: 250px;
+
   .mlsel-filter-input {
   }
 
